<resources>
    <string name="app_name">Lab2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tabbed">Tabbed</string>

    <string name="tab_first_text">First</string>
    <string name="tab_second_text">Second</string>
    <string name="tab_third_text">Third</string>
    <string name="tab_addition_text">Addition</string>
    <string name="to_home">Back Home</string>
    <string name="title_activity_tabbed">Tabbed Activity</string>
</resources>